--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Gulp Starter</title>
+    <title>WebApp</title>
     <link rel="stylesheet" href="css/app.css" />
   </head>
 
   <body>
-    <h1>Gulp All The Things!</h1>
+    <h1>WebApp</h1>
     <div id="content">
-      <p>init content</p>
+      <p id="main">init content</p>
+      <p id="footer">footer</p>
     </div>
     <script src="js/main.js"></script>
   </body>
