--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,7 @@
   </head>
 
   <body>
-    <h1>WebApp</h1>
-    <div id="content">
-      <p id="main">init content</p>
-      <p id="footer">footer</p>
+    <div id="app">
     </div>
     <script src="js/main.js"></script>
   </body>
